--- a/top.html
+++ b/top.html
@@ -4,16 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>A Great Demo on CodePen</title>
- <link rel="stylesheet" href="style.css">
+  <title>MARKES</title>
+ <link rel="stylesheet" href="style2.css">
 
 
 </head>
 <body>
-<h3 align="center" style="color: darkblue">JUST CHILL</h3>
+<h3 align="center" style="color: darkblue">WHITE</h3>
+    <h3 align="center" style="color: darkblue"> PANDA</h3>
+    <h3 align="center" style="color: darkblue">PIRATE</h3>
+    <h3 align="center" style="color: darkblue">BAY</h3>
 
-<p align = "middle" > <img src="pandas.png"  ></p><p align = "middle" > <img src="panda.png"  ></p>
+<h3> <img src="pandas.png"  ></h3> 
      
-  
+ 
 </body>
 </html>
